最优实例与结果上报